tests-integration/fixtures/checking/168_derive_ord_1/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
Id :: forall (a :: Type). (a :: Type) -> Id (a :: Type)
Wrap ::
  forall (t5 :: Type) (f :: (t5 :: Type) -> Type) (a :: (t5 :: Type)).
    (f :: (t5 :: Type) -> Type) (a :: (t5 :: Type)) ->
    Wrap @(t5 :: Type) (f :: (t5 :: Type) -> Type) (a :: (t5 :: Type))
Compose ::
  forall (t12 :: Type) (t16 :: Type) (f :: (t12 :: Type) -> Type)
    (g :: (t16 :: Type) -> (t12 :: Type)) (a :: (t16 :: Type)).
    (f :: (t12 :: Type) -> Type) ((g :: (t16 :: Type) -> (t12 :: Type)) (a :: (t16 :: Type))) ->
    Compose @(t16 :: Type)
      (f :: (t12 :: Type) -> Type)
      (g :: (t16 :: Type) -> (t12 :: Type))
      (a :: (t16 :: Type))
NoOrd :: forall (a :: Type). (a :: Type) -> NoOrd (a :: Type)

Types
Id :: Type -> Type
Wrap :: forall (t5 :: Type). ((t5 :: Type) -> Type) -> (t5 :: Type) -> Type
Compose ::
  forall (t12 :: Type) (t16 :: Type).
    ((t12 :: Type) -> Type) -> ((t16 :: Type) -> (t12 :: Type)) -> (t16 :: Type) -> Type
NoOrd :: Type -> Type

Data
Id
  Quantified = :0
  Kind = :0

Wrap
  Quantified = :1
  Kind = :0

Compose
  Quantified = :2
  Kind = :0

NoOrd
  Quantified = :0
  Kind = :0


Roles
Id = [Representational]
Wrap = [Representational, Nominal]
Compose = [Representational, Representational, Nominal]
NoOrd = [Representational]

Derived
derive forall (&0 :: Type). (Eq1 (&1 :: Type -> Type), Eq ((&2 :: (&0 :: Type) -> Type) (&3 :: (&0 :: Type)))) => Eq (Compose @Type @(&0 :: Type) (&1 :: Type -> Type) (&2 :: (&0 :: Type) -> Type) (&3 :: (&0 :: Type)) :: Type)
derive forall (&0 :: Type). (Ord1 (&1 :: Type -> Type), Ord ((&2 :: (&0 :: Type) -> Type) (&3 :: (&0 :: Type)))) => Ord (Compose @Type @(&0 :: Type) (&1 :: Type -> Type) (&2 :: (&0 :: Type) -> Type) (&3 :: (&0 :: Type)) :: Type)
derive Eq1 (&0 :: Type -> Type) => Eq1 (Compose @Type @Type (&0 :: Type -> Type) (&1 :: Type -> Type) :: Type -> Type)
derive Ord1 (&0 :: Type -> Type) => Ord1 (Compose @Type @Type (&0 :: Type -> Type) (&1 :: Type -> Type) :: Type -> Type)
derive Eq (&0 :: Type) => Eq (NoOrd (&0 :: Type) :: Type)
derive Eq1 (NoOrd :: Type -> Type)
derive Ord1 (NoOrd :: Type -> Type)
derive Eq (&0 :: Type) => Eq (Id (&0 :: Type) :: Type)
derive Eq1 (Id :: Type -> Type)
derive Ord (&0 :: Type) => Ord (Id (&0 :: Type) :: Type)
derive Ord1 (Id :: Type -> Type)
derive (Eq1 (&0 :: Type -> Type), Eq (&1 :: Type)) => Eq (Wrap @Type (&0 :: Type -> Type) (&1 :: Type) :: Type)
derive Eq1 (&0 :: Type -> Type) => Eq1 (Wrap @Type (&0 :: Type -> Type) :: Type -> Type)
derive (Ord1 (&0 :: Type -> Type), Ord (&1 :: Type)) => Ord (Wrap @Type (&0 :: Type -> Type) (&1 :: Type) :: Type)
derive Ord1 (&0 :: Type -> Type) => Ord1 (Wrap @Type (&0 :: Type -> Type) :: Type -> Type)

Diagnostics
error[NoInstanceFound]: No instance found for: Eq ((&1 :: Type -> Type) (~&0 :: Type))
  --> 26:1..26:43
   |
26 | derive instance Eq1 f => Eq1 (Compose f g)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Ord ((&1 :: Type -> Type) (~&0 :: Type))
  --> 27:1..27:45
   |
27 | derive instance Ord1 f => Ord1 (Compose f g)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Ord (NoOrd (~&0 :: Type))
  --> 34:1..34:27
   |
34 | derive instance Ord1 NoOrd
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~
